Added a lot of code, needs cleaning up